# stay_backend

./: .gitignore  CLAUDE.md  Makefile  README.md  celery_worker.py  pyproject.toml  requirements.txt  run.py  test_manual.py
app/: __init__.py  config.py  docs.py
app/api/: __init__.py  endpoints.py
app/models/: __init__.py  email.py
app/services/: __init__.py  email_parser.py  gmail_service.py  llm_service.py
app/utils/: __init__.py  auth.py  file_token_storage.py  session_tokens.py  startup.py  token_storage.py  validators.py
tests/: conftest.py  test_api.py  test_models.py  test_services.py
